# OC_projet_DS_8

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  generate_openapi.py  preprocessing.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-monitoring.txt  requirements-tests.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml  deploy.yml
app/: gradio_ui.py  main.py
app/artefacts/: feature_list.csv  model.onnx  preprocessor.joblib
app/core/: config.py  logging.py
app/routers/: health.py  prediction.py
app/schemas/: credit.py  health.py
app/services/: db_service.py  prediction_service.py  preprocessing.py
database/: db_session.py
database/models/: app_log.py  loan_application.py  prediction_log.py
docs/: churnPrediction_openapi.yaml  coverage_report.txt  optimization_report.md  supabase_setup.md
git-hooks/: pre-commit
monitoring/: dashboard.py  drift_detection.py  reference_data.csv
notebooks/: 03_drift_analysis.ipynb
optimization/: baseline_lgbm.pkl  benchmark.py  benchmark_results.json  profile_inference.py
tests/: conftest.py  test_health.py  test_logging.py  test_prediction.py  test_preprocessing.py  test_schemas.py
