[project]
name = "credit-scoring-api"
version = "1.0.0"
description = "Credit Scoring API - Predict loan repayment probability"
authors = [
    {name = "Thomas-Oshagan Haladjian", email = "thomas.haladjian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio (>=6.9.0,<7.0.0)",
    "onnxruntime (>=1.24.4,<2.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.34.0,<1.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pydantic (>=2.10.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "joblib (>=1.4.0,<2.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "huggingface-hub (>=0.28.0,<1.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
httpx = ">=0.28.0,<1.0.0"
evidently = ">=0.6.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
